# sound-communication

./: .gitignore  do_log_parsing.py  log.txt  messenger.ui  optional_requirements.txt  pyproject.toml  requirements.txt  run.sh
sender/: listener.py  main.py
sender/optional/: visualize.py
sender/soundcom/: audio.py  audioconsts.py
src/: TODO.md  alternative.py  cryptoec.py  error_corrector.py  gui.py  listener.py  log.py  main.py  stream.py  ui.py
src/optional/: __init__.py  visualize.py
src/soundcom/: __init__.py  audio.py  audioconsts.py
